fix docker image use sytax error